Fix trombinoscope on firefox

--- a/tools/bazar/presentation/styles/trombinoscope.css
+++ b/tools/bazar/presentation/styles/trombinoscope.css
@@ -41,6 +41,7 @@
   text-align: center;
   font-size: 10rem;
   top: 15%;
+  left: 0;
   color: var(--neutral-soft-color);
 }
 @media (min-width: 1200px) {
